--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -24,7 +24,7 @@ bed_texture = ender3.svg
 default_materials = Creality PLA @CREALITY; Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY
 
 [printer_model:ENDER3V2]
-name = Creality Ender-3V2
+name = Creality Ender-3 V2
 variants = 0.4
 technology = FFF
 family = ENDER
@@ -698,8 +698,9 @@ retract_before_wipe = 70%
 start_gcode = G90 ; use absolute coordinates\nM83 ; extruder relative mode\nM104 S150 ; set extruder temp for auto bed leveling\nM140 S[first_layer_bed_temperature] ; set bed temp\nG28 ; home all\nG1 Z50 F240\nG1 X2 Y10 F3000\nM104 S[first_layer_temperature] ; set extruder temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp\nM109 S[first_layer_temperature] ; wait for extruder temp\nG1 Z0.28 F240\nG92 E0\nG1 Y190 E15 F1500 ; intro line\nG1 X2.3 F5000\nG92 E0\nG1 Y10 E15 F1200 ; intro line\nG92 E0
 end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, max_print_height)} F600{endif} ; Move print head up\nG1 X5 Y170 F{travel_speed*60} ; present print\n{if max_layer_z < max_print_height-10}G1 Z{z_offset+min(max_layer_z+70, max_print_height-10)} F600{endif} ; Move print head further up\nM140 S0 ; turn off heatbed\nM104 S0 ; turn off temperature\nM107 ; turn off fan\nM84 X Y E ; disable motors
 
-[printer:Creality Ender-3V2]
+[printer:Creality Ender-3 V2]
 inherits = Creality Ender-3
+renamed_from = "Creality Ender-3V2"
 printer_model = ENDER3V2
 printer_variant = 0.4
 bed_shape = 0x0,220x0,220x220,0x220
