--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -77,6 +77,15 @@ default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @
 #bed_texture = cr6se.svg
 #default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+#[printer_model:CR6MAX]
+#name = Creality CR-6 Max
+#variants = 0.4
+#technology = FFF
+#family = CR
+#bed_model = cr10s4_bed.stl
+#bed_texture = cr10s4.svg
+#default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 [printer_model:CR10MINI]
 name = Creality CR-10 Mini
 variants = 0.4
@@ -773,6 +782,13 @@ max_print_height = 200
 #printer_model = CR6SE
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR6SE\nPRINTER_HAS_BOWDEN
 
+#[printer:Creality CR-6 Max]
+#inherits = Creality Ender-3; *slowabl*
+#bed_shape = 5x5,395x5,395x395,5x395
+#printer_model = CR6MAX
+#printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR6MAX\nPRINTER_HAS_BOWDEN
+#max_print_height = 400
+
 [printer:Creality CR-10 Mini]
 inherits = Creality Ender-3
 retract_length = 6
@@ -832,7 +848,7 @@ max_print_height = 400
 [printer:Creality CR-10 S4]
 inherits = Creality Ender-3
 retract_length = 6
-bed_shape = 5x5,405x5,405x405,5x405
+bed_shape = 5x5,395x5,395x395,5x395
 printer_model = CR10S4
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR10S4\nPRINTER_HAS_BOWDEN
 max_print_height = 400
