creality.ini: increase CR-6/CR-10 Max retract_length slightly

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -793,6 +793,7 @@ max_print_height = 200
 
 #[printer:Creality CR-6 Max]
 #inherits = Creality Ender-3; *slowabl*
+#retract_length = 6
 #bed_shape = 5x5,395x5,395x395,5x395
 #printer_model = CR6MAX
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR6MAX\nPRINTER_HAS_BOWDEN
@@ -808,6 +809,7 @@ max_print_height = 300
 
 #[printer:Creality CR-10 Max]
 #inherits = Creality Ender-3; *slowabl*
+#retract_length = 6
 #bed_shape = 5x5,445x5,445x445,5x445
 #printer_model = CR10MAX
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR10MAX\nPRINTER_HAS_BOWDEN
