creality.ini: add vendor associated color for Das Filament

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -628,6 +628,7 @@ first_layer_temperature = 215
 first_layer_bed_temperature = 60
 filament_cost = 20.56
 filament_density = 1.24
+filament_colour = #C7F935
 
 [filament:Das Filament PETG @CREALITY]
 inherits = *PET*
@@ -638,6 +639,7 @@ first_layer_temperature = 240
 first_layer_bed_temperature = 70
 filament_cost = 27.44
 filament_density = 1.29
+filament_colour = #C7F935
 
 # Common printer preset
 [printer:*common*]
