creality.ini: Add safety zone for CR-10 S Pro

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -146,7 +146,7 @@ variants = 0.4
 technology = FFF
 family = CR
 bed_model = cr10v2_bed.stl
-bed_texture = cr10.svg
+bed_texture = cr10spro.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
 [printer_model:CR10SPROV2]
@@ -852,7 +852,7 @@ max_print_height = 400
 [printer:Creality CR-10 S Pro]
 inherits = Creality Ender-3; *slowabl*
 retract_length = 6
-bed_shape = 0x0,300x0,300x300,0x300
+bed_shape = 5x5,295x5,295x295,5x295
 printer_model = CR10SPRO
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR10SPRO\nPRINTER_HAS_BOWDEN
 max_print_height = 400
