creality.ini: Add Extrudr GreenTEC Pro filament

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -592,6 +592,17 @@ filament_density = 1.3
 filament_colour = #3C4547
 filament_spool_weight = 256
 
+[filament:Extrudr GreenTEC Pro @CREALITY]
+inherits = *PLA*
+filament_vendor = Extrudr
+temperature = 210
+bed_temperature = 60
+first_layer_temperature = 215
+first_layer_bed_temperature = 60
+filament_cost = 56.24
+filament_density = 1.35
+filament_colour = #3C4547
+
 [filament:Real Filament PLA @CREALITY]
 inherits = *PLA*
 filament_vendor = Real Filament
