Force signed char on all GCC platforms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,10 @@ if (MINGW)
     add_compile_options(-Wa,-mbig-obj)
 endif ()
 
+if (NOT MSVC)
+    add_compile_options(-fsigned-char)
+endif ()
+
 # Display and check CMAKE_PREFIX_PATH
 message(STATUS "SLIC3R_STATIC: ${SLIC3R_STATIC}")
 if (NOT "${CMAKE_PREFIX_PATH}" STREQUAL "")
