--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -68,6 +68,15 @@ bed_model = ender5plus_bed.stl
 bed_texture = ender5plus.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+#[printer_model:ENDER6]
+#name = Creality Ender-6
+#variants = 0.4
+#technology = FFF
+#family = ENDER
+#bed_model = ender6_bed.stl
+#bed_texture = ender6.svg
+#default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 [printer_model:ENDER2]
 name = Creality Ender-2
 variants = 0.4
@@ -850,6 +859,13 @@ machine_max_acceleration_e = 1000
 machine_max_feedrate_z = 5
 machine_max_feedrate_x = 300
 machine_max_feedrate_y = 300
+
+#[printer:Creality Ender-6]
+#inherits = Creality Ender-3; *invertedz*
+#bed_shape = 5x5,255x5,255x255,5x255
+#printer_model = ENDER6
+#printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER6\nPRINTER_HAS_BOWDEN
+#max_print_height = 400
 
 [printer:Creality Ender-2]
 inherits = Creality Ender-3
