--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -780,6 +780,10 @@ start_gcode = G90 ; use absolute coordinates\nM83 ; extruder relative mode\nM104
 [printer:*slowabl*]
 start_gcode = G90 ; use absolute coordinates\nM83 ; extruder relative mode\nM104 S120 ; set temporary nozzle temp to prevent oozing during homing and auto bed leveling\nM140 S[first_layer_bed_temperature] ; set final bed temp\nM190 S[first_layer_bed_temperature] ; wait for bed temp to stabilize\nG28 ; home all axis\nG29 ; auto bed levelling\nG1 Z50 F240\nG1 X2 Y10 F3000\nM104 S[first_layer_temperature] ; set final nozzle temp\nM109 S[first_layer_temperature] ; wait for nozzle temp to stabilize\nG1 Z0.28 F240\nG92 E0\nG1 Y140 E10 F1500 ; prime the nozzle\nG1 X2.3 F5000\nG92 E0\nG1 Y10 E10 F1200 ; prime the nozzle\nG92 E0
 
+# Intended for printers with vendor official firmware verified to support M25
+[printer:*pauseprint*]
+pause_print_gcode = M25 ; pause print
+
 # Intended for printers where the Z-axis lowers the print bed during printing, like the Ender-5 series
 [printer:*invertedz*]
 end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, max_print_height)} F600{endif} ; Move print bed down\nG1 X50 Y50 F{travel_speed*60} ; present print\n{if max_layer_z < max_print_height-10}G1 Z{z_offset+max_print_height-10} F600{endif} ; Move print bed down further down\nM140 S0 ; turn off heatbed\nM104 S0 ; turn off temperature\nM107 ; turn off fan\nM84 X Y E ; disable motors
@@ -860,7 +864,7 @@ printer_notes = Don't remove the following keywords! These keywords are used in 
 max_print_height = 200
 
 #[printer:Creality CR-6 SE]
-#inherits = Creality Ender-3; *fastabl*
+#inherits = Creality Ender-3; *fastabl*; *pauseprint*
 #bed_shape = 5x0,230x0,230x235,5x235
 #printer_model = CR6SE
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR6SE\nPRINTER_HAS_BOWDEN
