--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -37,8 +37,8 @@ name = Creality Ender-3 V2
 variants = 0.4
 technology = FFF
 family = ENDER
-bed_model = ender3_bed.stl
-bed_texture = ender3.svg
+bed_model = ender3v2_bed.stl
+bed_texture = ender3v2.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
 #[printer_model:ENDER3MAX]
@@ -832,7 +832,7 @@ printer_model = ENDER3BLTOUCH
 inherits = Creality Ender-3
 renamed_from = "Creality Ender-3V2"
 printer_model = ENDER3V2
-bed_shape = 0x0,220x0,220x220,0x220
+bed_shape = 5x0,215x0,215x220,5x220
 
 #[printer:Creality Ender-3 Max]
 #inherits = Creality Ender-3
