creality.ini: descendingz is more descriptive

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -812,7 +812,8 @@ start_gcode = G90 ; use absolute coordinates\nM83 ; extruder relative mode\nM104
 pause_print_gcode = M25 ; pause print
 
 # Intended for printers where the Z-axis lowers the print bed during printing, like the Ender-5 series
-[printer:*invertedz*]
+[printer:*descendingz*]
+renamed_from = "*invertedz*"
 end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, max_print_height)} F600{endif} ; Move print bed down\nG1 X50 Y50 F{travel_speed*60} ; present print\n{if max_layer_z < max_print_height-10}G1 Z{z_offset+max_print_height-10} F600{endif} ; Move print bed down further down\nM140 S0 ; turn off heatbed\nM104 S0 ; turn off temperature\nM107 ; turn off fan\nM84 X Y E ; disable motors
 
 # Intended for printers with dual extruders and a single hotend/nozzle, like the CR-X series
@@ -861,14 +862,14 @@ bed_shape = 5x0,215x0,215x220,5x220
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER3MAX\nPRINTER_HAS_BOWDEN
 
 #[printer:Creality Ender-4]
-#inherits = Creality Ender-3; *invertedz*
+#inherits = Creality Ender-3; *descendingz*
 #bed_shape = 5x0,215x0,215x220,5x220
 #max_print_height = 300
 #printer_model = ENDER4
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER4\nPRINTER_HAS_BOWDEN
 
 [printer:Creality Ender-5]
-inherits = Creality Ender-3; *invertedz*
+inherits = Creality Ender-3; *descendingz*
 retract_length = 6
 bed_shape = 5x2.5,225x2.5,225x222.5,5x222.5
 max_print_height = 300
@@ -878,7 +879,7 @@ machine_max_acceleration_e = 1000
 machine_max_feedrate_z = 5
 
 [printer:Creality Ender-5 Plus]
-inherits = Creality Ender-3; *slowabl*; *invertedz*
+inherits = Creality Ender-3; *slowabl*; *descendingz*
 retract_length = 6
 bed_shape = 5x5,355x5,355x355,5x355
 max_print_height = 400
@@ -890,7 +891,7 @@ machine_max_feedrate_x = 300
 machine_max_feedrate_y = 300
 
 #[printer:Creality Ender-6]
-#inherits = Creality Ender-3; *invertedz*
+#inherits = Creality Ender-3; *descendingz*
 #bed_shape = 5x5,255x5,255x255,5x255
 #max_print_height = 400
 #printer_model = ENDER6
