creality.ini: descendingz gcode comment improvement

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -814,7 +814,7 @@ pause_print_gcode = M25 ; pause print
 # Intended for printers where the Z-axis lowers the print bed during printing, like the Ender-5 series
 [printer:*descendingz*]
 renamed_from = "*invertedz*"
-end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, max_print_height)} F600{endif} ; Move print bed down\nG1 X50 Y50 F{travel_speed*60} ; present print\n{if max_layer_z < max_print_height-10}G1 Z{z_offset+max_print_height-10} F600{endif} ; Move print bed down further down\nM140 S0 ; turn off heatbed\nM104 S0 ; turn off temperature\nM107 ; turn off fan\nM84 X Y E ; disable motors
+end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, max_print_height)} F600{endif} ; Move print bed down\nG1 X50 Y50 F{travel_speed*60} ; move print head out of the way\n{if max_layer_z < max_print_height-10}G1 Z{z_offset+max_print_height-10} F600{endif} ; Move print bed close to the bottom\nM140 S0 ; turn off heatbed\nM104 S0 ; turn off temperature\nM107 ; turn off fan\nM84 X Y E ; disable motors
 
 # Intended for printers with dual extruders and a single hotend/nozzle, like the CR-X series
 [printer:*dualextruder*]
