--- a/resources/profiles/INAT.ini
+++ b/resources/profiles/INAT.ini
@@ -2,7 +2,7 @@
 
 [vendor]
 # Vendor name will be shown by the Config Wizard.
-name = INAT s.r.o.
+name = INAT
 config_version = 0.0.1
 config_update_url = http://files.prusa3d.com/wp-content/uploads/repository/PrusaSlicer-settings-master/live/INAT/
 
