creality.ini: add printer_notes to Ender3V2

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -829,6 +829,7 @@ renamed_from = "Creality Ender-3V2"
 bed_shape = 5x0,215x0,215x220,5x220
 max_print_height = 250
 printer_model = ENDER3V2
+printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_ENDER3V2\nPRINTER_HAS_BOWDEN
 
 #[printer:Creality Ender-3 Max]
 #inherits = *common*
