creality.ini: add CR-200B

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -230,6 +230,15 @@ bed_model = ender3_bed.stl
 bed_texture = cr20.svg
 default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
 
+#[printer_model:CR200B]
+#name = Creality CR-200B
+#variants = 0.4
+#technology = FFF
+#family = CR
+#bed_model = cr200b_bed.stl
+#bed_texture = cr200b.svg
+#default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @CREALITY; Creality PLA @CREALITY; Prusament PLA @CREALITY; Prusament PETG @CREALITY; AzureFilm PLA @CREALITY; Devil Design PLA @CREALITY; Devil Design PLA (Galaxy) @CREALITY; Extrudr PLA NX2 @CREALITY; Real Filament PLA @CREALITY; Velleman PLA @CREALITY; 3DJAKE ecoPLA @CREALITY; 123-3D Jupiter PLA @CREALITY
+
 #[printer_model:CR8]
 #name = Creality CR-8
 #variants = 0.4
@@ -1005,6 +1014,11 @@ inherits = *common*; *fastabl*
 retract_length = 4
 printer_model = CR20PRO
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR20PRO\nPRINTER_HAS_BOWDEN
+
+#[printer:Creality CR-200B]
+#inherits = *common*
+#printer_model = CR200B
+#printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR200B\nPRINTER_HAS_BOWDEN
 
 #[printer:Creality CR-8]
 #inherits = *common*
