--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -1017,6 +1017,8 @@ printer_notes = Don't remove the following keywords! These keywords are used in 
 
 #[printer:Creality CR-200B]
 #inherits = *common*
+#bed_shape = 5x5,195x5,195x195,5x195
+#max_print_height = 200
 #printer_model = CR200B
 #printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR200B\nPRINTER_HAS_BOWDEN
 
