Detecting platform, namely reading /proc/version to detect Chromium OS. Disabling Eject on Chromium, detecting removable media the Chromium way.

--- a/src/slic3r/CMakeLists.txt
+++ b/src/slic3r/CMakeLists.txt
@@ -207,6 +207,8 @@ set(SLIC3R_GUI_SOURCES
     Utils/Bonjour.hpp
     Utils/PresetUpdater.cpp
     Utils/PresetUpdater.hpp
+    Utils/Platform.cpp
+    Utils/Platform.hpp
     Utils/Process.cpp
     Utils/Process.hpp
     Utils/Profile.hpp
