Add TIFF and JPEG for wxWidgets
using URL does not download git submodules for wx

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -173,6 +173,8 @@ include(NLopt/NLopt.cmake)
 include(OpenSSL/OpenSSL.cmake)
 include(CURL/CURL.cmake)
 
+include(JPEG/JPEG.cmake)
+include(TIFF/TIFF.cmake)
 include(wxWidgets/wxWidgets.cmake)
 
 set(_dep_list
