creality.ini: improve bridging

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -281,6 +281,7 @@ default_materials = Generic PLA @CREALITY; Generic PETG @CREALITY; Generic ABS @
 # Common print preset
 [print:*common*]
 avoid_crossing_perimeters = 0
+bridge_acceleration = 250
 bridge_angle = 0
 bridge_flow_ratio = 0.95
 bridge_speed = 25
@@ -288,6 +289,7 @@ brim_width = 0
 clip_multipart_objects = 1
 compatible_printers = 
 complete_objects = 0
+default_acceleration = 500
 dont_support_bridges = 1
 elefant_foot_compensation = 0.1
 ensure_vertical_shell_thickness = 1
@@ -383,6 +385,7 @@ layer_height = 0.08
 perimeters = 3
 bottom_solid_layers = 9
 top_solid_layers = 11
+bridge_flow_ratio = 0.70
 
 [print:*0.10mm*]
 inherits = *common*
@@ -390,6 +393,7 @@ layer_height = 0.10
 perimeters = 3
 bottom_solid_layers = 7
 top_solid_layers = 9
+bridge_flow_ratio = 0.70
 
 [print:*0.12mm*]
 inherits = *common*
@@ -397,12 +401,14 @@ layer_height = 0.12
 perimeters = 3
 bottom_solid_layers = 6
 top_solid_layers = 7
+bridge_flow_ratio = 0.70
 
 [print:*0.16mm*]
 inherits = *common*
 layer_height = 0.16
 bottom_solid_layers = 5
 top_solid_layers = 7
+bridge_flow_ratio = 0.85
 
 [print:*0.20mm*]
 inherits = *common*
