--- a/resources/profiles/INAT.ini
+++ b/resources/profiles/INAT.ini
@@ -4,7 +4,7 @@
 # Vendor name will be shown by the Config Wizard.
 name = INAT
 config_version = 0.0.2
-config_update_url = http://files.prusa3d.com/wp-content/uploads/repository/PrusaSlicer-settings-master/live/INAT/
+config_update_url = https://files.prusa3d.com/wp-content/uploads/repository/PrusaSlicer-settings-master/live/INAT/
 
 ###
 ###     PRINTER LIST
