creality.ini: disable explicit ABL for CR6-SE (#6383)
this is also better in line with Creality's intended behavior

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -969,7 +969,7 @@ printer_model = CR5PROH
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR5PROH\nPRINTER_HAS_BOWDEN
 
 [printer:Creality CR-6 SE]
-inherits = *common*; *fastabl*; *pauseprint*
+inherits = *common*; *pauseprint*
 bed_shape = 5x0,230x0,230x235,5x235
 printer_model = CR6SE
 printer_notes = Don't remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_CREALITY\nPRINTER_MODEL_CR6SE\nPRINTER_HAS_BOWDEN
