creality.ini: improve output_filename_format
this moves the print_time directly after the input_filename_base,
so it has the most chance of surviving truncation by marlin.

temperature is also added in front of the filament_type.

--- a/resources/profiles/Creality.ini
+++ b/resources/profiles/Creality.ini
@@ -326,7 +326,7 @@ notes =
 overhangs = 0
 only_retract_when_crossing_perimeters = 0
 ooze_prevention = 0
-output_filename_format = {input_filename_base}_{layer_height}mm_{filament_type[0]}_{printer_model}_{print_time}.gcode
+output_filename_format = {input_filename_base}_{print_time}_{layer_height}mm_{temperature[0]}C_{filament_type[0]}_{printer_model}.gcode
 perimeters = 2
 perimeter_extruder = 1
 perimeter_extrusion_width = 0.45
